envoy-dev.yaml
static_resources:
  listeners:
    - name: listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: {prefix: "/upload"}
                          route:
                            cluster: http_upload_backend
                            timeout: 300s
                        - match: {prefix: "/refresh"}
                          route:
                            cluster: http_upload_backend
                            timeout: 300s
                        - match: {prefix: "/get-refresh-token"}
                          route:
                            cluster: http_upload_backend
                            timeout: 300s
                        - match: { prefix: "/" }
                          route:
                            cluster: grpc_backend
                            timeout: 300s
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive, user-agent, cache-control, content-type, content-transfer-encoding, custom-header-1, x-accept-content-transfer-encoding, x-accept-response-streaming, x-user-agent, x-grpc-web, grpc-timeout,authentication,Content-Type,authorization,refresh_token,set-cookie,Cookie,token
                        max_age: "1728000"
                        expose_headers: custom-header-1, grpc-status, grpc-message,content-type, x-auth-token, authentication,authorization,refresh_token,set-cookie,Cookie,token
                        allow_credentials: true
                http_filters:
                    - name: envoy.filters.http.grpc_web
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                    - name: envoy.filters.http.cors  # CORS filter should be listed here
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                    - name: envoy.filters.http.router  # Router filter is applied last
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      per_connection_buffer_limit_bytes: 10485760
  # Backend cluster definition
  clusters:
    - name: grpc_backend
      connect_timeout: 300s
      type: logical_dns
      per_connection_buffer_limit_bytes: 10485760
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: grpc_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 50051  # Your gRPC service running on port 50051

    - name: http_upload_backend
      connect_timeout: 300s
      per_connection_buffer_limit_bytes: 10485760
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: http_upload_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 8081  # Your HTTP file upload service running on port 8081
